--- a/nginx_certbot_data/nginx/app.conf
+++ b/nginx_certbot_data/nginx/app.conf
@@ -22,8 +22,10 @@ server {
     include /etc/letsencrypt/options-ssl-nginx.conf;
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
+    root    /usr/share/nginx/html;
+
     location / {
-        proxy_pass  http://example.org;
+        try_files $uri $uri/ /index.html;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
